--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <div id="mc_embed_signup">
-<form action="https://con.us12.list-manage.com/subscribe/post?u=d33ba1bc42501a282a6d216ee&amp;id=620944ac48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="https://con.us12.list-manage.com/subscribe/post?u=d33ba1bc42501a282a6d216ee&amp;id=620944ac48" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
     <div id="mc_embed_signup_scroll">
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d33ba1bc42501a282a6d216ee_620944ac48" tabindex="-1" value=""></div>
