--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 						<div class="container">
 							<div class="row">
 								<div class="left col-12 col-sm-12 col-md-7">
-									<h1 class="ez-animate animated fadeInLeft" data-animation="fadeInLeft" style="animation-delay: 0s; opacity: 1;">Perfect app landing page for your app.</h1>
-									<p class="ez-animate animated fadeInLeft" data-animation="fadeInLeft" style="animation-delay: 0s; opacity: 1;">Purchase our premium quality complete landing page template.</p>
+									<h1 class="ez-animate animated fadeInLeft" data-animation="fadeInLeft" style="animation-delay: 0s; opacity: 1;"><span style="font-size:130%;">Coronavirus</span> <br>(COVID-19)</h1>
+									<p class="ez-animate animated fadeInLeft" data-animation="fadeInLeft" style="animation-delay: 0s; opacity: 1;">Find out if someone is infected around you</p>
 									<ul>
-										<li><a href="http://cocotemplates.com/html/appcraft/#"><img class="img-fluid ez-animate animated fadeInUp" src="./Myapp_files/img-appstore.png" alt="Appcraft" data-animation="fadeInUp" style="animation-delay: 0s; opacity: 1;"></a></li>
-										<li><a href="http://cocotemplates.com/html/appcraft/#"><img class="img-fluid ez-animate animated fadeInUp" src="./Myapp_files/img-googleplay.png" alt="Appcraft" data-animation="fadeInUp" style="animation-delay: 0s; opacity: 1;"></a></li>
+										<li><a href="https://www.apple.com/ios/app-store/"><img class="img-fluid ez-animate animated fadeInUp" src="./Myapp_files/img-appstore.png" alt="Appcraft" data-animation="fadeInUp" style="animation-delay: 0s; opacity: 1;"></a></li>
+										<li><a href="https://play.google.com/store/apps"><img class="img-fluid ez-animate animated fadeInUp" src="./Myapp_files/img-googleplay.png" alt="Appcraft" data-animation="fadeInUp" style="animation-delay: 0s; opacity: 1;"></a></li>
 									</ul>
 								</div>
 								<div class="right ez-animate col-12 col-sm-12 col-md-5 animated fadeInRight" data-animation="fadeInRight" style="animation-delay: 0s; opacity: 1;">
