--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0039)http://cocotemplates.com/html/appcraft/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Uniocde -->
 
@@ -9,13 +8,13 @@
     <!-- First Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Pgae Description -->
-    <meta name="description" content="Appcraft portfolio Template">
+    <meta name="description" content="COVID-19 App Template">
     <!-- Page Kewords -->
-    <meta name="keywords" content="Appcraft">
+    <meta name="keywords" content="COVID-19 App">
     <!-- Site Author -->
-    <meta name="author" content="Appcraft">
+    <meta name="author" content="Mamun">
     <!-- Title -->
-    <title>Home 1 | Appcraft</title>
+    <title>Coronavirus | COVID-19 App</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="http://cocotemplates.com/html/appcraft/assets/images/favicon.png">
     <!-- Bootstrap 4 -->
