Preview image change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- First Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Pgae Description -->
-    <meta name="description" content="COVID-19 App Template">
+	<meta name="description" content="COVID-19 App Template">
+	<meta property="og:image" content="Myapp_files/images/img-1" />
     <!-- Page Kewords -->
     <meta name="keywords" content="COVID-19 App">
     <!-- Site Author -->
