--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									</ul>
 								</div>
 								<div class="right ez-animate col-12 col-sm-12 col-md-5 animated fadeInRight" data-animation="fadeInRight" style="animation-delay: 0s; opacity: 1;">
-									<img class="img-fluid" src="./Myapp_files/img-1.png" alt="Appcraft">
+									<img class="img-fluid" src="./Myapp_files/images/img-1.png" alt="Appcraft">
 								</div>
 							</div>
 						</div>
