--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 			<div class="footer-widget">
 				<div class="row">
 					<div class="left col-md-6">
-						<a href="http://cocotemplates.com/html/appcraft/index.html"><img src="./Myapp_files/logo.png" alt="Appcraft"></a>
+						<a href="#"><img src="./Myapp_files/logo.png" alt="Appcraft"></a>
 					</div>
 					<div class="right col-md-6">
 						<div class="social-links">
