--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<!-- Section Navbar -->
 	<nav class="navbar-1 navbar navbar-expand-lg">
         <div class="container navbar-container">
-            <a class="navbar-brand" href="#"><img src="./Myapp_files/logo.png" alt="Appcraft"></a>
+            <a class="navbar-brand" href="#"><img src="./Myapp_files/logo.png" alt="logo"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                 	<li class="nav-item ">
