--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
 			<div class="row">
 				<!-- Item -->
 				<div class="item col">
-					<a href="http://cocotemplates.com/html/appcraft/#"><img src="./Myapp_files/img-client1.png" alt="Appcraft"></a>
+					<a href="#"><img src="./Myapp_files/img-client1.png" alt="Appcraft"></a>
 				</div>
 				<!-- /.Item -->
 				<!-- Item -->
 				<div class="item col">
-					<a href="http://cocotemplates.com/html/appcraft/#"><img src="./Myapp_files/img-client2.png" alt="Appcraft"></a>
+					<a href="#"><img src="./Myapp_files/img-client2.png" alt="Appcraft"></a>
 				</div>
 				<!-- /.Item -->
 				<!-- Item -->
 				<div class="item col">
-					<a href="http://cocotemplates.com/html/appcraft/#"><img src="./Myapp_files/img-client3.png" alt="Appcraft"></a>
+					<a href="#"><img src="./Myapp_files/img-client3.png" alt="Appcraft"></a>
 				</div>
 				<!-- /.Item -->
 				<!-- Item -->
 				<div class="item col">
-					<a href="http://cocotemplates.com/html/appcraft/#"><img src="./Myapp_files/img-client4.png" alt="Appcraft"></a>
+					<a href="#"><img src="./Myapp_files/img-client4.png" alt="Appcraft"></a>
 				</div>
 				<!-- /.Item -->
 				<!-- Item -->
 				<div class="item col">
-					<a href="http://cocotemplates.com/html/appcraft/#"><img src="./Myapp_files/img-client5.png" alt="Appcraft"></a>
+					<a href="#"><img src="./Myapp_files/img-client5.png" alt="Appcraft"></a>
 				</div>
 				<!-- /.Item -->
 			</div>
@@ -254,7 +254,7 @@
 						<h6 class="clscheme">01 – Add new task</h6>
 						<h2>Everything starts with the task</h2>
 						<p>There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour lorem ipsum is simply free text in the</p>
-						<a href="http://cocotemplates.com/html/appcraft/#" class="btn-2 shadow1 style3 bgscheme">GET STARTED NOW</a>
+						<a href="#" class="btn-2 shadow1 style3 bgscheme">GET STARTED NOW</a>
 					</div>
 				</div>
 			</div>
@@ -268,7 +268,7 @@
 						<h6 class="clscheme">01 – Add new task</h6>
 						<h2>Everything starts with the task</h2>
 						<p>There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour lorem ipsum is simply free text in the</p>
-						<a href="http://cocotemplates.com/html/appcraft/#" class="btn-2 shadow1 style3 bgscheme">GET STARTED NOW</a>
+						<a href="#" class="btn-2 shadow1 style3 bgscheme">GET STARTED NOW</a>
 					</div>
 					<div class="left col-sm-12 col-md-6">
 						<div class="img-container">
@@ -393,7 +393,7 @@
 					</ul>
 					<div class="price clscheme"><span class="currency">$</span> 25 <span class="duration">/m</span></div>
 					<div class="cta">
-						<a href="http://cocotemplates.com/html/appcraft/#" class="btn-1 shadow1 style3 bgscheme">START FREE TRIAL</a>
+						<a href="#" class="btn-1 shadow1 style3 bgscheme">START FREE TRIAL</a>
 					</div>
 				</div>
 				<!-- /.Item -->
@@ -410,7 +410,7 @@
 					</ul>
 					<div class="price clscheme"><span class="currency">$</span> 35 <span class="duration">/m</span></div>
 					<div class="cta">
-						<a href="http://cocotemplates.com/html/appcraft/#" class="btn-1 shadow1 style3 bgscheme">START FREE TRIAL</a>
+						<a href="#" class="btn-1 shadow1 style3 bgscheme">START FREE TRIAL</a>
 					</div>
 				</div>
 				<!-- /.Item -->
@@ -427,7 +427,7 @@
 					</ul>
 					<div class="price clscheme"><span class="currency">$</span> 45 <span class="duration">/m</span></div>
 					<div class="cta">
-						<a href="http://cocotemplates.com/html/appcraft/#" class="btn-1 shadow1 style3 bgscheme">START FREE TRIAL</a>
+						<a href="#" class="btn-1 shadow1 style3 bgscheme">START FREE TRIAL</a>
 					</div>
 				</div>
 				<!-- /.Item -->
@@ -612,7 +612,7 @@
 					<h2>Subscribe to our newsletter</h2>
 				</div>
 				<div class="form col-12 ez-animate animated fadeInUp" data-animation="fadeInUp" style="animation-delay: 0s; opacity: 1;">
-					<form action="http://cocotemplates.com/html/appcraft/#" id="SubscribeForm">
+					<form action="#" id="SubscribeForm">
 						<input type="email" name="yourEmail" placeholder="Enter your email address" required="">
 						<button type="submit" class="shadow1 bgscheme">SUBSCRIBE NOW</button>
 					</form>
@@ -655,10 +655,10 @@
 					</div>
 					<div class="right col-md-6">
 						<div class="social-links">
-			                <a href="http://cocotemplates.com/html/appcraft/#"><i class="fa fa-google-plus fa-lg"></i></a>
-			                <a href="http://cocotemplates.com/html/appcraft/#"><i class="fa fa-twitter fa-lg"></i></a>
-			                <a href="http://cocotemplates.com/html/appcraft/#"><i class="fa fa-instagram fa-lg"></i></a>
-			                <a href="http://cocotemplates.com/html/appcraft/#"><i class="fa fa-behance fa-lg"></i></a>
+			                <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
+			                <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
+			                <a href="#"><i class="fa fa-instagram fa-lg"></i></a>
+			                <a href="#"><i class="fa fa-behance fa-lg"></i></a>
 			            </div>
 					</div>
 				</div>
