--- a/index.html
+++ b/index.html
@@ -655,10 +655,12 @@
 					</div>
 					<div class="right col-md-6">
 						<div class="social-links">
-			                <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-			                <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-			                <a href="#"><i class="fa fa-instagram fa-lg"></i></a>
-			                <a href="#"><i class="fa fa-behance fa-lg"></i></a>
+
+							<a href="#"><i class="fa fa-android fa-lg"></i></a>
+							<a href="#"><i class="fa fa-apple fa-lg"></i></a>
+							<a href="#"><i class="fa fa-youtube-play fa-lg" aria-hidden="true"></i></a>
+							<a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+
 			            </div>
 					</div>
 				</div>
