--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					<div class="left col-sm-12 col-md-6">
 						<div class="img-container">
 							<img class="circleicon1 ez-animate animated fadeInUp" src="./Myapp_files/img-circleicon1.png" alt="Appcraft" data-animation="fadeInUp" style="animation-delay: 0s; opacity: 1;">
-							<img class="img-fluid ez-animate animated fadeInLeft" src="./Myapp_files/img-2.png" alt="Appcraft" data-animation="fadeInLeft" style="animation-delay: 0s; opacity: 1;">
+							<img class="img-fluid ez-animate animated fadeInLeft" src="./Myapp_files/images/img-2.png" alt="Appcraft" data-animation="fadeInLeft" style="animation-delay: 0s; opacity: 1;">
 						</div>
 					</div>
 					<div class="right my-auto col-sm-12 col-md-6">
